docs/7.57/md/abenicf_post_service_abexa.md
---
title: "ICF - Calling an HTTP Service Using the POST Method"
description: |
  This example demonstrates calls of an HTTP service in ICF(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_glosry.htm 'Glossary Entry') and a Web browser. The input data is passed using the POST method. Source Code REPORT demo_http_post_service. CLASS demo DEFINITION. PUBLIC S
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_post_service_abexa.htm"
abapFile: "abenicf_post_service_abexa.htm"
keywords: ["select", "do", "if", "case", "try", "method", "class", "data", "abenicf", "post", "service", "abexa"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [Internet Communication Framework (ICF)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf.htm) →  [ICF - Examples](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_abexas.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ICF - Calling an HTTP Service Using the POST Method, ABENICF_POST_SERVICE_ABEXA, 757%
0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

ICF - Calling an HTTP Service Using the POST Method

This example demonstrates calls of an HTTP service in [ICF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_glosry.htm "Glossary Entry") and a Web browser. The input data is passed using the POST method.

Source Code   

REPORT demo\_http\_post\_service.
CLASS demo DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS main.
    CLASS-METHODS class\_constructor.
  PRIVATE SECTION.
    CLASS-DATA icf\_node TYPE string.
ENDCLASS.
CLASS demo IMPLEMENTATION.
  METHOD main.
    IF icf\_node IS INITIAL.
      RETURN.
    ENDIF.
    FINAL(url) = icf\_node &&
                \`?sap-client=\` && sy-mandt &&
                \`&sap-language=\`
                  && cl\_i18n\_languages=>sap1\_to\_sap2( sy-langu ).
    cl\_demo\_output=>display\_html(
      |<html>| &&
      |<body>| &&
      |Link to HTTP-Service:<br><br>| &&
      |<a href="{ url }" target="\_blank" rel="noopener noreferrer">{
                  url }</a>| &&
      |</body>| &&
      |</html>| ).  ENDMETHOD.
  METHOD class\_constructor.
    CONSTANTS path TYPE string VALUE \`/sap/bc/abap/demo\_post\`.
    FINAL(location) =
      cl\_http\_server=>get\_location( application = path ).
    IF location IS NOT INITIAL.
      icf\_node = location && path.
    ENDIF.
  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  demo=>main( ).

Description   

This example has the same structure as the executable example [Calling an HTTP Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_service_abexa.htm). In this case, the method IF\_HTTP\_EXTENSION~HANDLE\_REQUEST of the class CL\_HTTP\_EXT\_SERVICE\_POST\_DEMO is used to demonstrate how user input sent by a HTML page form generated by the handler class is sent using the POST method and read using the method GET\_CDATA.

Hint

The HTTP service must be activated in transaction SICF before the example can work.