docs/7.58/md/abenicf_post_service_abexa.md
---
title: "ICF - Calling an HTTP Service Using the POST Method"
description: |
  This example demonstrates calls of an HTTP service in ICF(https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenicf_glosry.htm 'Glossary Entry') and a Web browser. The input data is passed using the POST method. Source Code  Public class definition CLASS cl_demo_http_post_service DE
version: "7.58"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenicf_post_service_abexa.htm"
abapFile: "abenicf_post_service_abexa.htm"
keywords: ["do", "if", "case", "try", "method", "class", "data", "abenicf", "post", "service", "abexa"]
---

* * *

AS ABAP Release 758, ©Copyright 2024 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenabap_data_communication.htm) →  [Internet Communication Framework (ICF)](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenicf.htm) →  [ICF - Examples](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenicf_abexas.htm) → 

 [![](Mail.gif?object=Mail.gif "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback%20on%20ABAP%20Documentation&body=Document:%20ICF%20-%20Calling%20an%20HTTP%20Service%20Using%20the%20POST%20Method%2C%20ABENICF_POST_SERVICE_ABEXA%2C%20758%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASugge
stion%20for%20improvement:)

ICF - Calling an HTTP Service Using the POST Method

This example demonstrates calls of an HTTP service in [ICF](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenicf_glosry.htm "Glossary Entry") and a Web browser. The input data is passed using the POST method.

Source Code   

\* Public class definition
CLASS cl\_demo\_http\_post\_service DEFINITION
  INHERITING FROM cl\_demo\_classrun
  PUBLIC
  CREATE PUBLIC.
  PUBLIC SECTION.
    METHODS main REDEFINITION.
    METHODS constructor.
  PRIVATE SECTION.
    DATA icf\_node TYPE string.
ENDCLASS.
\* Public class implementation
CLASS cl\_demo\_http\_post\_service IMPLEMENTATION.
  METHOD main.
    IF icf\_node IS INITIAL.
      RETURN.
    ENDIF.
    FINAL(url) = icf\_node &&
                \`?sap-client=\` && sy-mandt &&
                \`&sap-language=\`
                  && cl\_i18n\_languages=>sap1\_to\_sap2( sy-langu ).
    out->write\_html(
      |<html>| &&
      |<body>| &&
      |Link to HTTP-Service:<br><br>| &&
      |<a href="{ url }" target="\_blank" rel="noopener noreferrer">{
                  url }</a>| &&
      |</body>| &&
      |</html>| ).
  ENDMETHOD.
  METHOD constructor.
    super->constructor( ).
    CONSTANTS path TYPE string VALUE \`/sap/bc/abap/demo\_post\`.
    FINAL(location) =
      cl\_http\_server=>get\_location( application = path ).
    IF location IS NOT INITIAL.
      icf\_node = location && path.
    ENDIF.
  ENDMETHOD.
ENDCLASS.

Description   

This example has the same structure as the executable example [Calling an HTTP Service](https://help.sap.com/doc/abapdocu_758_index_htm/7.58/en-US/abenicf_service_abexa.htm). In this case, the method IF\_HTTP\_EXTENSION~HANDLE\_REQUEST of the class CL\_HTTP\_EXT\_SERVICE\_POST\_DEMO is used to demonstrate how user input sent by a HTML page form generated by the handler class is sent using the POST method and read using the method GET\_CDATA.

Hint

The HTTP service must be activated in transaction SICF before the example can work.